0.2 (I've been watching you...):
 * Rewrote the screenshot module completely to support active window
 screenshots and scaling. #3 #10 
 * Added Basic HTTP Authentication.
 * Notifications now show up in reference to the status icon.
 * Added option (-debug) to show all console output #5
 * Add options to report errors in the system tray (blinking true). #7
 
 * Completely rewrote the console output and Gui logging engines.
 * Rewrote the UI log pausing code.
 * Better handling of Twisted errors in logging
 * Fixed the pausing/unpausing of the logger.

 * Completely separated and encapsulated the Twisted Server code.
  
 * Improved the configuration engine to convert numbers and bools into int and
 bool rather than str. Also the Gui now saves on a per-key basis and not on 
 a all-or-nothing dict differential #9
 * Rewrote parts of the configuration engine to better handling upgrading from
 previous configuration files that are missing sections or options. #12

 * Recommented the whole code according to Epytext Markup and also did major
 tweaks to naming. #8
 * Changed strings in text to be more literal and intuitive 
 * Removed all useless type-checking and started relying on my own exceptions.

 * Updated GUI on Windows not to show widgets for features that are not
 available (libnotify, screenshot active window)

 * Detailed log non-twisted messages are now bold.

 * Updated documentation and added new references.

 * Fixed minor UI quirks.
 * Fixed a syntax bug in uigtk.py when GTK version is < 2.10
 * Fixed bug when saving preferences in the GUI reverted to /tmp by default

0.1.1:
 * Fix Debian Makefile
 * Remove bad print call in notify procedures

0.1 (Mercado):
 * Initial release